--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ requests==2.32.3
 fastapi==0.112.0
 uvicorn==0.30.5
 gunicorn==22.0.0
+numpy==1.26.4
+flake8==7.0.0
+pydantic==2.7.1
+scipy==1.13.0
+python-multipart==0.0.9
+
